--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
 
     //Complemento para JSON
     implementation 'com.airbnb.android:lottie:2.1.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
